# multi-agent-vllm

./: .gitignore  CHANGES_SUMMARY.md  QUICKSTART.md  README-unified.md  README.md  TESTING_REPORT.md  deploy-unified.sh  validate-config.sh
NeMo-Agent-Toolkit/: .coderabbit.yaml  .pre-commit-config.yaml  pyproject.toml
NeMo-Agent-Toolkit/ci/scripts/: path_checks.py
NeMo-Agent-Toolkit/docker/: Dockerfile
NeMo-Agent-Toolkit/docs/source/: index.md
NeMo-Agent-Toolkit/examples/A2A/currency_agent_a2a/: pyproject.toml
NeMo-Agent-Toolkit/examples/A2A/currency_agent_a2a/configs/: config.yml
NeMo-Agent-Toolkit/examples/A2A/math_assistant_a2a/: pyproject.toml
NeMo-Agent-Toolkit/examples/A2A/math_assistant_a2a/src/nat_math_assistant_a2a/configs/: config.yml
NeMo-Agent-Toolkit/examples/MCP/service_account_auth_mcp/: README.md  pyproject.toml
NeMo-Agent-Toolkit/examples/MCP/service_account_auth_mcp/src/nat_service_account_auth_mcp/scripts/: service_tokens.py
NeMo-Agent-Toolkit/examples/UI/: README.md
NeMo-Agent-Toolkit/examples/deploy/: README.md
NeMo-Agent-Toolkit/examples/dynamo_integration/: README.md
NeMo-Agent-Toolkit/examples/finetuning/dpo_tic_tac_toe/: README.md  pyproject.toml
NeMo-Agent-Toolkit/examples/finetuning/rl_with_openpipe_art/: pyproject.toml
NeMo-Agent-Toolkit/examples/frameworks/multi_frameworks/: README.md  pyproject.toml
NeMo-Agent-Toolkit/examples/frameworks/multi_frameworks/src/nat_multi_frameworks/: llama_index_rag_tool.py  register.py
NeMo-Agent-Toolkit/examples/front_ends/per_user_workflow/: pyproject.toml
NeMo-Agent-Toolkit/examples/notebooks/: mcp_setup_and_integration.ipynb  multi_agent_orchestration.ipynb  observability_evaluation_and_profiling.ipynb
NeMo-Agent-Toolkit/tests/_utils/: dask_utils.py
claude-plugins-official/.claude-plugin/: marketplace.json
dgx-spark-playbooks/nvidia/vllm/: README.md
dgx-spark-toolkit/: .gitignore  AGENTS.md  LICENSE  METALLB_GUIDE.md
dgx-spark-toolkit/cluster-control-ui/static/: metrics_collector.py
dgx-spark-toolkit/cluster-control-ui/templates/: index.html
dgx-spark-toolkit/config/: network.env.example
dgx-spark-toolkit/deployments/: dashboard-api-clusterrole.yaml  ollama-ingress.yaml  ollama-service.yaml
dgx-spark-toolkit/deployments/image-gen/: namespace.yaml  server.py
dgx-spark-toolkit/deployments/nemotron/: namespace.yaml  pvc.yaml
dgx-spark-toolkit/model-manager/: Dockerfile  app.py
dgx-spark-toolkit/model-manager/templates/: index.html
dgx-spark-toolkit/scripts/: check_roce.sh  sleep-cluster.sh  stop-k8s-cluster.sh
features/NeMo-Agent-Toolkit/: .gitlab-ci.yml
features/NeMo-Agent-Toolkit/docs/: README.md
features/NeMo-Agent-Toolkit/examples/: README.md
features/NeMo-Agent-Toolkit/examples/MCP/kaggle_mcp/: README.md  pyproject.toml
features/NeMo-Agent-Toolkit/examples/frameworks/strands_demo/: pyproject.toml
features/NeMo-Agent-Toolkit/examples/frameworks/strands_demo/bedrock_agentcore/: Dockerfile  README.md
features/NeMo-Agent-Toolkit/examples/frameworks/strands_demo/src/nat_strands_demo/configs/: config.yml  eval_config.yml  sizing_config.yml
features/NeMo-Agent-Toolkit/tests/: conftest.py
features/dgx-spark-toolkit/: AGENTS.md  README.md
features/dgx-spark-toolkit/cluster-control-ui/: README.md  app.py  install.sh  requirements.txt  start.sh  stop.sh
features/dgx-spark-toolkit/deployments/: apps-namespace.yaml  dashboard-admin.yaml  dashboard-ingress.yaml  gpu-smoke.yaml  kubernetes-dashboard-lb.yaml  metallb-config.yaml  nfs-storageclass.yaml  ollama-deployment.yaml  ollama-pvc.yaml  openwebui-ingress.yaml  pvc-nfs.yaml  rdma-bw.yaml
features/dgx-spark-toolkit/model-manager/: requirements.txt
features/dgx-spark-toolkit/scripts/: check-k8s-cluster.sh  ensure-fabric-ip.sh  run_nccl_200g.sh
features/neuro-san-benchmarking/: .coveragerc  .gitignore
features/neuro-san-benchmarking/build_scripts/: run_pylint.sh  source_available_copyright.txt
neuro-san-benchmarking/: .pylintrc  CODE_OF_CONDUCT.md  INSTRUMENTATION_GUIDE.md  README.md  SUPPORT.md  requirements-build.txt  requirements.txt
neuro-san-benchmarking/build_scripts/: copyright_config.json  run_markdownlint.sh
neuro-san-benchmarking/data/: bench_long_mul_10_10__200.jsonl  bench_sort_len_500__50.jsonl  synthetic_sort_len_5__200.jsonl
neuro-san-benchmarking/decomposer/: session_manager.py  trace_data.py
neuro-san-benchmarking/maker_playground/: hanoi.ipynb  requirements.txt  toh_simulator.py
neuro-san-benchmarking/registries/: manifest.hocon  multi_step_decomposer.hocon
neuro-san-benchmarking/tests/: test_multiagent_reasoner.py  test_placeholder.py
unified-deployments/: cluster-ui-enhanced.py  deploy-unified.sh  model_download.sh  storage-pvcs.yaml  unified-config.env  validate-config.sh
unified-deployments/agents/: agents-deployment.yaml
unified-deployments/backend/: Dockerfile  agent.py  client.py  config.py  logger.py  main.py  models.py  postgres_storage.py  prompts.py  utils.py  vector_store.py
unified-deployments/cluster-control-ui/: requirements.txt
unified-deployments/k8s-deployments/: dashboard-admin-token.yaml  openwebui-deployment.yaml  openwebui-pvc.yaml  rdma-check.yaml
unified-deployments/multi-agent/: Dockerfile  README.md  pyproject.toml
unified-deployments/multi-agent/multi_agent/: __init__.py  core.py  cross_validation.py  main.py  precision.py  server.py
unified-deployments/multi-agent/multi_agent/agents/: __init__.py  coding.py  coding_completion.py  image_understanding.py  rag.py  supervisor.py
unified-deployments/multi-agent/multi_agent/prompts/: __init__.py  code_architect.md  code_review.md  coding_system.md  debugging.md  feature_dev.md
unified-deployments/multi-agent/multi_agent/tools/: __init__.py  base.py  code_execution.py  common.py  file_tools.py  memory_tool.py  security.py
unified-deployments/multi-agent/multi_agent/utils/: __init__.py  progress.py  tool_executor.py
unified-deployments/scripts/: start-k8s-cluster.sh  wake-cluster.sh
unified-deployments/vllm/: vllm-deployment.yaml
(+365 files in other folders)
