[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
# NAT uses the --first-parent flag to avoid tags from previous releases which have been merged into the develop branch
# from causing an unexpected version change. This can be safely removed if developing outside of the NAT repository.
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_dpo_tic_tac_toe"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.5",
  # langchain-aws pins numpy to 1.* for Python <3.12 -- remove once package is updated
  "numpy~=1.26; python_version < '3.12'",
  "numpy~=2.3; python_version >= '3.12'",
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent Toolkit Example: DPO Preference Data Generation with Test Time Compute"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
dpo_tic_tac_toe = "dpo_tic_tac_toe.register"
