[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
# NAT uses the --first-parent flag to avoid tags from previous releases which have been merged into the develop branch
# from causing an unexpected version change. This can be safely removed if developing outside of the NAT repository.
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_rl_with_openpipe_art"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]~=1.5",
  "nvidia-nat[openpipe-art]~=1.5"
]
requires-python = ">=3.11,<3.14"
description = "NeMo Agent Toolkit Workflow Demonstrating GRPO with OpenPipe ART"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
rl_with_openpipe_art = "rl_with_openpipe_art.register"