[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_per_user_workflow"
dynamic = ["version"]
dependencies = [
  "nvidia-nat~=1.5",
]
requires-python = ">=3.11,<3.14"
description = "Per-User Workflow NeMo Agent Toolkit example"
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }

[project.entry-points.'nat.components']
nat_per_user_workflow = "nat_per_user_workflow.register"
