[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools]
packages = []

[tool.setuptools_scm]
git_describe_command = "git describe --long --first-parent"
root = "../../.."

[project]
name = "nat_kaggle_mcp"
dynamic = ["version"]
dependencies = [
    "nvidia-nat[mcp]~=1.5",
]
requires-python = ">=3.11,<3.14"
description = "Kaggle MCP integration example with bearer token authentication"
keywords = ["ai", "mcp", "protocol", "agents", "kaggle", "datasets"]
classifiers = ["Programming Language :: Python"]

[tool.uv.sources]
nvidia-nat = { path = "../../..", editable = true }
